plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id "io.github.ximtech.jasypt-encrypt-plugin" version "1.3.3"
}

group = 'com.inv'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.apache.commons:commons-text:1.12.0'
	implementation 'dev.langchain4j:langchain4j:0.33.0'
	implementation 'dev.langchain4j:langchain4j-vertex-ai-gemini:0.33.0'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

bootJar {
	archiveBaseName.set('demo-java-spring-api')
	archiveVersion.set('1.0.0')
	archiveFileName.set('demo-java-spring-api-1.0.0.jar')
	launchScript()
}

wrapper{
	gradleVersion = '8.7'
	distributionType = Wrapper.DistributionType.BIN
}

encryptProperties {
	password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
}

decryptProperties {
	password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs '-ea', '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
}